css/_style.scss
@import "bootstrap/mixins";

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: sans-serif;
}
body {
	color: #333;
}
h1, h2, h3, h4, h5,
h1 a, h2 a, h3 a, h4 a, h5 a {
	font-family: "proxima-nova-sc-osf-condensed", Helvetica, Arial, sans-serif;
    color: $cfa-pink;
    //font-size: 2em;
	font-weight: 700;
}

h4 {
	margin-top: 1.5em;
}

a {
	color: $cfa-blue;
	text-decoration: none;
}

ul, ol {
	list-style-position: inside;
}
li {
	h3 {
		color: $cfa-pink;
	}
}

.btn,
.btn-lg {
	margin-bottom: 0.5em;
	border-radius: 0;
}

.cover {
	.btn {
		background: rgba(0, 0, 0, 0.5);
		border: 3px solid white;
	}
}

.brand-second {
	display: block;
	font-family: "proxima-nova-sc-osf-condensed", sans-serif;
	color: $cfa-pink;
}

.container {
	padding: 2em;
}


.petition {
	margin: 1em auto;
	padding: 2em;
	border: 1px solid #ddd;
	background-color: #eee;

	h3 {
		margin-top: 0;
		margin-bottom: 1em;
		font: italic normal 1.5em serif;
		text-align: center;
	}

	div {
		margin-bottom: 1em;
		text-align: center;
	}

	a:last-of-type {
		display: block;
		font-size: .875em;
	}

	input {
		width: 100%;
		padding: 0.5em;
		border: 1px solid $cfa-blue;
		font: 1.25em/1.5em serif;

		&:first-of-type {
			border-bottom: 0;
		}
	}

	button {
		width: 100%;
		padding: 0.25em;
		border: 1px solid $cfa-blue;
		background-color: $cfa-blue;
		font: 1.25em/2em "proxima-nova-sc-osf-condensed", sans-serif;
		color: white;
		text-align: center;
		vertical-align: top;
	}
}
.form-petition {
	display: none;
}
.petition-yes {
	display: inline-block;
	margin-bottom: 0.25em;
	width: 100%;
	padding: 0.25em 0.75em;
	border: 3px solid $cfa-blue;
	background-color: white;
	font: 2em "proxima-nova-sc-osf-condensed", sans-serif;
	text-decoration: none;
	text-transform: uppercase;
	color: $cfa-blue;

	&:hover {
		background-color: $cfa-blue;
		color: white;
	}
}

@media screen and (min-width: 768px) {
	.brand-second {
		display: inline-block;
	}
	.petition {
		input {
			float: left;
			width: 50%;

			&:nth-of-type(odd) {
				border-bottom: 1px solid $cfa-blue;
				border-right: 0;
			}

			&:nth-of-type(1),
			&:nth-of-type(2) {
				border-bottom: 0;
			}
		}

		button {
			width: 100%;
		}
	}
	.petition-yes {
		width: 40%;
	}
}

